# WebFeedReports

./: .env.example  .gitignore  README.md  pyproject.toml
.azure/: deployment-plan.md
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  main.py
apps/api/app/routes/: health.py  jobs.py  query.py  reports.py  sources.py
apps/frontend/: Dockerfile  package.json
apps/frontend/ReportTemplates/: BAE Systems Weekly News _ Middle East, North Africa and Türkiye _ 19.06.2026.eml
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/api/[...path]/: route.ts
apps/frontend/app/reports/: page.tsx
apps/frontend/app/search/: page.tsx
apps/frontend/lib/: api.ts
apps/frontend/public/: .gitkeep
apps/worker/: Dockerfile  pyproject.toml  requirements.txt
apps/worker/app/: __init__.py  consumers.py  handlers.py  main.py  schedulers.py
config/: report_templates.yaml  sources.yaml
infra/: main.bicep  main.bicepparam  main.json
infra/modules/: containerapp-env.bicep  containerapps.bicep  identity.bicep  monitoring.bicep  openai.bicep  rbac.bicep  registry.bicep  search.bicep  servicebus.bicep  storage.bicep
scripts/: build-and-push.ps1  demo-down.ps1  demo-up.ps1  deploy.ps1
