[project]
name = "webfeedreports"
version = "0.1.0"
description = "Cloud-native RSS/web briefing platform on Azure Container Apps"
requires-python = ">=3.11"
readme = "README.md"

# This is a workspace root. The deployable apps live under apps/* and the
# shared libraries under packages/*. Each app declares its own runtime deps;
# the shared packages are installed in editable mode for local development.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps", "packages", "tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
