[project]
name = "webfeed-api"
version = "0.1.0"
description = "FastAPI orchestration service for WebFeedReports"
requires-python = ">=3.11"
dependencies = [
    "webfeed-shared",
    "webfeed-platform",
    "webfeed-domain",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
