[project]
name = "webfeed-worker"
version = "0.1.0"
description = "Background ingestion, processing, indexing and reporting worker"
requires-python = ">=3.11"
dependencies = [
    "webfeed-shared",
    "webfeed-platform",
    "webfeed-domain",
    "apscheduler>=3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
